--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Aqui vai ser uma imagem</h1>
-<ul>
-    <li>Escola</li>
-    <li>Estudante</li>
+    <header class="cabecalho">
+        <h1><img class="cabecalho-imagem" src="logo.jpg" alt="logo"></h1>
+        <h2>Colégio Civico Militar Ruth Martinês Corrêa</h2> 
+<ul class="cabecalho-lista">
+    <li class="cabecalho-lista-item">Escola</li>
+    <li class="cabecalho-lista-item">Estudante</li>
 </ul>
     </header>
 
